syntax = "proto3";

option csharp_namespace = "Server";

package music;

// The music service definition.
service MusicService {
  // Sends a music request
  rpc GetAlbumDetails (AlbumRequest) returns (AlbumDetails);
}

// The request message containing the user's name.
message AlbumRequest {
  string artist = 1;
}

// The response message containing the albums.
message AlbumDetails {
  string album_name = 1;
  string label = 2;
  string year = 3;
}
